--- a/сss/stule.css
+++ b/сss/stule.css
@@ -68,3 +68,135 @@ line-height: 1.714;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
+
+/* основная часть главная */
+.about{
+background-color: #2F303A;
+}
+.about-title{
+font-family: Roboto;
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 1.363;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color: #FFFFFF;
+}
+.modal-btn{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 30px; 
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+background-color:  #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+}
+.about-function{
+background-color: #E5E5E5;
+}
+.title{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 1.142;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #212121;
+}
+
+.subtitle-light-theme{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: #757575;
+}
+.title-hero{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+line-height: 1.666;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.comand{
+background-color: #F5F4FA;
+}
+
+.title-hero{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+line-height: 1.666;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.comand-title-hero{
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.187;
+/* text-align: center; */
+letter-spacing: 0.03em;
+color: #212121;
+}
+.comand-light{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 1.187;
+/* text-align: center; */
+letter-spacing: 0.03em;
+color: #757575;
+}
+
+/* основная часть портфолио */
+.about-portfolio{
+background-attachment: #E5E5E5;
+}
+.box-modal-btn{
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+border-radius: 4px;
+}
+.border-title-hero{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 36px;
+letter-spacing: 0.06em;
+color: #212121;
+}
+.border-light{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 30px;
+letter-spacing: 0.03em;
+color: #757575;
+}
